--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
+
+    <!-- Spinner -->
+    <div class="d-flex justify-content-center">
+      <div class="spinner-border text-warning my-5 spinner-load" role="status" id="spinner-loading">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
